osd/PrimaryLogPG: clear data digest on WRITEFULL if skip_data_digest

If we detect we are on bluestore and should skip the data digest, we
need to clear any old digest on WRITEFULL.  This aligns us with the
WRITE behavior, which is also either an update or a clear (but never
neither!).

Fixes: https://tracker.ceph.com/issues/23871
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit fe5038c7f9577327f82913b4565712c53903ee48)